--- a/npc.html
+++ b/npc.html
@@ -16,7 +16,7 @@
 <div id="game"></div>
 <div class="hud" id="hud">
   PC：方向鍵 / WASD，E 對話
-  <div>手機：按住畫面滑動移動（放手停止）</div>
+  <div>手機：按住畫面滑動移動（放手停止</div>
   <div id="sizeLabel"></div>
   <div id="assetStatus"></div>
 </div>
