--- a/npc.html
+++ b/npc.html
@@ -2,13 +2,20 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,viewport-fit=cover" />
   <title>Plain 3200×3200 | NPC x4 | Obstacles | Arrow | Mobile Joystick</title>
   <style>
-    body { margin:0; background:#111; display:grid; place-items:center; height:100vh; touch-action:none; }
+    /* 用 100svh 解決手機地址列/工具列改變高度問題 */
+    html,body { height:100%; }
+    body { margin:0; background:#111; display:grid; place-items:center; height:100svh; touch-action:none; }
     #game { box-shadow:0 8px 24px rgba(0,0,0,.4); }
     .hud { position:fixed; left:12px; top:12px; color:#fff; font:14px system-ui,Segoe UI,Arial;
            background:rgba(0,0,0,.55); padding:8px 10px; border-radius:8px; user-select:none; white-space:pre-line; }
+    @supports(padding:max(0px)) {
+      .hud { padding-left: max(10px, env(safe-area-inset-left));
+             padding-right:max(10px, env(safe-area-inset-right));
+             padding-top:   max(8px,  env(safe-area-inset-top)); }
+    }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
 </head>
@@ -43,7 +50,7 @@ class MainScene extends Phaser.Scene {
     a.beginPath(); a.moveTo(28,18); a.lineTo(10,8); a.lineTo(10,28); a.closePath(); a.fill(); a.stroke();
     arrow.refresh();
 
-    // 嘗試多路徑載入（大小寫 / 路徑誤差都有備案）
+    // 嘗試多路徑載入
     this.load.image('player_main', 'assets/player.png');
     this.load.image('player_alt',  'player.png');
     this.load.image('npc_main',    'assets/npc.png');
@@ -69,7 +76,7 @@ class MainScene extends Phaser.Scene {
           return okKey;
         }
       };
-      // 內建備援：透明背景、簡易風格
+      // 內建備援：透明背景、簡易人形
       ensure('player', ['player_main','player_alt'], ctx => {
         ctx.clearRect(0,0,48,48);
         ctx.fillStyle='#1e90ff'; ctx.beginPath(); ctx.ellipse(24,34,14,12,0,0,Math.PI*2); ctx.fill(); // 身體
@@ -112,32 +119,33 @@ class MainScene extends Phaser.Scene {
 
     const useKey = k => this[k + '_resolved'] || k;
 
-    // 玩家（圖片 48px，實際顯示縮到 32px）
+    // 玩家
     const pImg = this.textures.get(useKey('player')).getSourceImage();
-    const pScale = 32 / pImg.width;  // 48 -> 32
+    const pScale = 32 / pImg.width;  // 48 -> 顯示 32
     const startX = this.map.widthInPixels/2, startY = this.map.heightInPixels/2;
     this.player = this.physics.add.image(startX,startY,useKey('player')).setScale(pScale).setDepth(6);
     this.player.setCollideWorldBounds(true);
     this.player.body.setSize(this.player.displayWidth*0.6, this.player.displayHeight*0.8, true);
 
-    // 相機：進場就鎖定 + 永遠居中（lerp=1 代表每幀硬跟）
-    // startFollow(target, roundPixels, lerpX, lerpY)
+    // —— 相機：永遠讓玩家在螢幕中央（硬中心化）——
+    // 跟隨（lerp=1 -> 每幀硬跟）
     this.cameras.main.startFollow(this.player, true, 1, 1);
-    // 再保險一次：立即把視角擺到正中（避免極少數載入幀出現偏移）
-    this.cameras.main.scrollX = this.player.x - this.cameras.main.width  * 0.5;
-    this.cameras.main.scrollY = this.player.y - this.cameras.main.height * 0.5;
-
     // 手機視角稍微放大
     if (this.sys.game.device.os.android || this.sys.game.device.os.iOS) {
       this.cameras.main.setZoom(1.2);
     }
+    // 立刻中心一次 + 下一幀 + 50ms 後再中心；並監聽 resize
+    this.centerCameraHard();
+    requestAnimationFrame(() => this.centerCameraHard());
+    this.time.delayedCall(50, () => this.centerCameraHard());
+    this.scale.on('resize', () => this.centerCameraHard());
 
     // 群組
     this.npcs  = this.physics.add.staticGroup();
     this.trees = this.physics.add.staticGroup();
     this.rocks = this.physics.add.staticGroup();
 
-    // NPC = 4 位（同樣把 48px 轉 32px 顯示）
+    // NPC = 4 位
     this.spawnNPCs(4, useKey('npc'));
 
     // 樹 & 石（不可穿越）
@@ -165,7 +173,7 @@ class MainScene extends Phaser.Scene {
     this.keys = this.input.keyboard.addKeys('W,A,S,D,E');
     this.speed = 240;
 
-    // 手機虛擬搖桿（畫面固定 UI）
+    // 手機虛擬搖桿
     this.joy = {
       base: this.add.circle(0,0,34,0x000000,0.25).setScrollFactor(0).setDepth(40).setVisible(false),
       knob: this.add.circle(0,0,18,0xffffff,0.35).setScrollFactor(0).setDepth(41).setVisible(false),
@@ -199,6 +207,13 @@ class MainScene extends Phaser.Scene {
       `地圖：3200×3200　NPC：${this.npcs.getLength()}　樹：${this.trees.getLength()}　石：${this.rocks.getLength()}`;
   }
 
+  // —— 強制把相機中心放在玩家 —— 
+  centerCameraHard(){
+    const cam = this.cameras.main;
+    cam.scrollX = this.player.x - cam.width  * 0.5;
+    cam.scrollY = this.player.y - cam.height * 0.5;
+  }
+
   // === 安全座標（考慮顯示寬高 + 外圈邊距） ===
   randomPosFor(displayW, displayH, margin=64){
     const halfW = displayW/2, halfH = displayH/2;
@@ -221,7 +236,6 @@ class MainScene extends Phaser.Scene {
       const p = this.randomPosFor(dispW, dispH, 96);
       const npc = this.npcs.create(p.x, p.y, npcKey).setScale(nScale).setDepth(6);
       npc.refreshBody();
-      // 生成後再夾一次，保證在邊界內
       const halfW = npc.displayWidth/2, halfH = npc.displayHeight/2;
       npc.setPosition(
         Phaser.Math.Clamp(npc.x, halfW, this.map.widthInPixels  - halfW),
@@ -264,7 +278,6 @@ class MainScene extends Phaser.Scene {
       const r = this.rocks.create(p.x,p.y,rockKey).setScale(s).setDepth(6);
       r.setRotation(Phaser.Math.FloatBetween(-0.35, 0.35));
       r.refreshBody();
-      // 再夾一次保險
       const halfW = r.displayWidth/2, halfH = r.displayHeight/2;
       r.setPosition(
         Phaser.Math.Clamp(r.x, halfW, this.map.widthInPixels  - halfW),
@@ -325,11 +338,8 @@ class MainScene extends Phaser.Scene {
     // 陰影
     this.drawShadows();
 
-    // —— 絕對保證玩家永遠在畫面正中（雙保險）——
-    //（有時某些瀏覽器在特定 resize/縮放後首幀可能掉跟，這裡每幀硬中心）
-    const cam = this.cameras.main;
-    cam.scrollX = this.player.x - cam.width  * 0.5;
-    cam.scrollY = this.player.y - cam.height * 0.5;
+    // 每幀再硬中心一次（極端裝置/瀏覽器保險）
+    this.centerCameraHard();
   }
 }
 
